# Daily-Kanji

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  out.txt  update_kana.py
assets/: n3.json  n4.json  n5.json
src/: app.rs  data.rs  main.rs  report.rs  state.rs  ui.rs
