[package]
name = "daily_kanji"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
crossterm = "0.29.0"
directories = "6.0.0"
rand = "0.10.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
